--- a/A propos/apropos.css
+++ b/A propos/apropos.css
@@ -5,6 +5,8 @@ header {
     background-color: #f5f5f5;
     position: fixed;
     width: 100%;
+    box-shadow: 5px 8px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999;      /* Très grand z-index pour passer devant tout */
 }
 
 /* Style du logo */
@@ -22,7 +24,8 @@ nav {
     flex-direction: column;
     justify-content: flex-start; /* Aligne les éléments en haut */
     align-items: center; /* Centre les éléments horizontalement */
-    padding-top: 80px;
+    padding-top: 125px;
+    box-shadow: 5px 8px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Style de la navigation */
